src/test/deca/context/invalid/LE/VoidParam.deca
// Historique:
//    cree le 22/01/2022

class C1{
    int methode (void a) {
        
    }
}

